Change team structure

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -77,24 +77,17 @@ title: Community
       %a{:class => "twitter-timeline", :href => "https://twitter.com/nmcl", :"data-widget-id" => "532496403956649984", :height => "250"}
   .col-md-6
     %h2
-      Tom Jenkinson
+      Michael Musgrove
     %h3
       Project Lead
-    %p
-      I am the project lead for the Narayana project at Red Hat. I specialise in transaction and integration technologies primarily in the distributed systems field. I hold a 1st Class Honours degree in Computer Science from the University of Newcastle-upon-Tyne, UK. Prior to working at Red Hat, I worked on messaging and transaction products and as a senior consultant specialising in integration projects.
-    .div{:style => "height: 250px"}
-      %a{:class => "twitter-timeline", :href => "https://twitter.com/tom_jenkinson", :"data-widget-id" => "532499035693662208", :height => "250"}
-
-.row
-  .col-md-6
-    %h2
-      Michael Musgrove
     %p
       Michael Musgrove is a developer with 20+ years experience building distributed systems using CORBA, Java EE and OSI. He currently works in the transactions team at Red Hat, Inc implementing Java and C++ solutions for the middleware market.
     %p
       Prior to his role at Red Hat Michael was involved with a variety of technologies including software and hardware fault tolerance, management of distributed systems and systems management products for servers.
     %p
       His latest interests include how to apply these experiences in a REST setting.
+
+.row
   .col-md-6
     %h2
       Ondra Chaloupka
@@ -104,6 +97,13 @@ title: Community
       Prior to work at Red Hat I gained experience in PHP web and Java EE logistic system development.
     .div{:style => "height: 250px"}
       %a{:class => "twitter-timeline", :href => "https://twitter.com/_chalda", :height => "250"}
+  .col-md-6
+    %h2
+      Tom Jenkinson
+    %p
+      My technical specialisms include transaction and integration technologies. primarily in the distributed systems field.
+    .div{:style => "height: 250px"}
+      %a{:class => "twitter-timeline", :href => "https://twitter.com/tom_jenkinson", :"data-widget-id" => "532499035693662208", :height => "250"}
 
 .row
   .col-md-6
