--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -108,6 +108,15 @@ title: Community
 .row
   .col-md-6
     %h2
+      Mayank Kunwar
+    %p
+      I started working for Red Hat in January 2020 and joined Narayana team as Software Engineer with overall 4 years of experience.
+    %p
+      Prior to this role, I have worked in distributed system projects, handling various components like Job scheduling, node management and managing transactions between nodes using Java EE technologies. In first year of my software career, I have also worked on C# technology.
+
+.row
+  .col-md-6
+    %h2
       Other contributors:
     %ul
       %li Jonathan Halliday
