Arjuna Evolution updates

--- a/architecture/index.html.haml
+++ b/architecture/index.html.haml
@@ -66,7 +66,9 @@ title:  Narayana Architecture
 %p
   %a{:href => "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/ArjunaWeiss.pdf"}
     A description of the evolution of Arjuna from academic project to commercial product.
-  A version of this was published in the USENIX Workshop on Industrial Experiences with Systems Software, Boston, MA, USA, 8 December 2002.
+  A version of this was published in the USENIX Workshop on Industrial Experiences with Systems Software, Boston, MA, USA, 8 December 2002. 
+  %a{:href => "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/ArjunaEvolution.pdf"}
+    For a more recent paper examining the evolution of the Arjuna Transaction Processing System, see the paper published in Springer Lecture Notes in Computer Science (LNCS) 6875, pp. 323–343, 2011
 %p
   %a{:href => "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/HPTS2005.pdf"}
     The evolution of a transaction processing system.
