LRA 1.0 certification update for the run with Narayana 5.11.1.Final

--- a/lra/certifications/microprofile-lra-1.0/index.html.haml
+++ b/lra/certifications/microprofile-lra-1.0/index.html.haml
@@ -18,36 +18,34 @@ title: Certification
   %li
     %p
       Tag -
-      %a{:href => "https://github.com/eclipse/microprofile-lra/tree/1.0"} https://github.com/eclipse/microprofile-lra/tree/1.0
+      %a{:href => "https://github.com/eclipse/microprofile-lra/releases/tag/1.0"} https://github.com/eclipse/microprofile-lra/releases/tag/1.0
   %li
     %p
       Commit -
-      %a{:href => "https://github.com/eclipse/microprofile-lra/commit/2c819998fc9d3d468052d3619fa50d6cbe3ad14e"} https://github.com/eclipse/microprofile-lra/commit/2c819998fc9d3d468052d3619fa50d6cbe3ad14e
+      %a{:href => "https://github.com/eclipse/microprofile-lra/commit/1eebb2221541f13d41ead557726150e34aec8ee7"} https://github.com/eclipse/microprofile-lra/commit/1eebb2221541f13d41ead557726150e34aec8ee7
   %li
     %p
       Download -
       %a{:href => "https://download.eclipse.org/microprofile/staging/microprofile-lra-1.0"} https://download.eclipse.org/microprofile/staging/microprofile-lra-1.0
 
-.h4 MicroProfile LRA 1.0-RC2 (used for the CCR)
+.h4 MicroProfile LRA 1.0-RC3 (used for the CCR)
 
 %ul
   %li
     %p
       Tag -
-      %a{:href => "https://github.com/eclipse/microprofile-lra/tree/1.0-RC2"} https://github.com/eclipse/microprofile-lra/tree/1.0-RC2
+      %a{:href => "https://github.com/eclipse/microprofile-lra/releases/tag/1.0-RC3"} https://github.com/eclipse/microprofile-lra/releases/tag/1.0-RC3
   %li
     %p
       Commit -
-      %a{:href => "https://github.com/eclipse/microprofile-lra/commit/d9a3c4ab4c0cd698832658998a5cc0fb21beb487"} https://github.com/eclipse/microprofile-lra/commit/d9a3c4ab4c0cd698832658998a5cc0fb21beb487
+      %a{:href => "https://github.com/eclipse/microprofile-lra/commit/169d01605b3b2f5ec7f2b8deefa403c8cf949973"} https://github.com/eclipse/microprofile-lra/commit/169d01605b3b2f5ec7f2b8deefa403c8cf949973
   %li
     %p
       Download -
-      %a{:href => "https://download.eclipse.org/microprofile/microprofile-lra-1.0-RC2"} https://download.eclipse.org/microprofile/microprofile-lra-1.0-RC2
+      %a{:href => "https://download.eclipse.org/microprofile/microprofile-lra-1.0-RC3"} https://download.eclipse.org/microprofile/microprofile-lra-1.0-RC3
 
 %p
-  The only difference between LRA 1.0 and LRA 1.0-RC2 is a small README file update -
-  %a{:href => "https://github.com/eclipse/microprofile-lra/commit/932f4a631a482c059591b9e0a1b3b509a6d96407"} https://github.com/eclipse/microprofile-lra/commit/932f4a631a482c059591b9e0a1b3b509a6d96407
-  which is not influencing the TCK results. The API and TCK binaries are the same.
+  The are no differences between LRA 1.0 and LRA 1.0-RC3. The API and TCK binaries are the same.
 
 .h3 Implementation details
 
@@ -55,26 +53,26 @@ title: Certification
   %li
     %p
       Implementation Name -
-      %a{:href => "https://github.com/jbosstm/narayana"} Narayana
+      %a{:href => "https://narayana.io/"} Narayana
   %li
     %p
-      Version - 5.11.0.Final
+      Version - 5.11.1.Final
   %li
     %p
       Download Binary -
-      %a{:href => "http://www.jboss.org/jbosstm/downloads/5.11.0.Final/binary/narayana-full-5.11.0.Final-bin.zip"} http://www.jboss.org/jbosstm/downloads/5.11.0.Final/binary/narayana-full-5.11.0.Final-bin.zip
+      %a{:href => "http://www.jboss.org/jbosstm/downloads/5.11.1.Final/binary/narayana-full-5.11.1.Final-bin.zip"} http://www.jboss.org/jbosstm/downloads/5.11.1.Final/binary/narayana-full-5.11.1.Final-bin.zip
   %li
     %p
       Download Source Code -
-      %a{:href => "http://www.jboss.org/jbosstm/downloads/5.11.0.Final/src/narayana-full-5.11.0.Final-src.zip"} http://www.jboss.org/jbosstm/downloads/5.11.0.Final/src/narayana-full-5.11.0.Final-src.zip
+      %a{:href => "http://www.jboss.org/jbosstm/downloads/5.11.1.Final/src/narayana-full-5.11.1.Final-src.zip"} http://www.jboss.org/jbosstm/downloads/5.11.1.Final/src/narayana-full-5.11.1.Final-src.zip
   %li
     %p
       VCS revision tag
-      %a{:href => "https://github.com/jbosstm/narayana/tree/5.11.0.Final"} https://github.com/jbosstm/narayana/tree/5.11.0.Final
+      %a{:href => "https://github.com/jbosstm/narayana/releases/tag/5.11.1.Final"} https://github.com/jbosstm/narayana/releases/tag/5.11.1.Final
   %li
     %p
       VCS revision commit
-      %a{:href => "https://github.com/jbosstm/narayana/commit/7c964826687a0619e91d63d633936942e6a3a34c"} https://github.com/jbosstm/narayana/commit/7c964826687a0619e91d63d633936942e6a3a34c
+      %a{:href => "https://github.com/jbosstm/narayana/commit/d5e35b549fad8fe929179ce59cf80aec4794dfcc"} https://github.com/jbosstm/narayana/commit/d5e35b549fad8fe929179ce59cf80aec4794dfcc
 
 .h3 Compatibility Certification Request JDK 11
 
@@ -129,39 +127,39 @@ title: Certification
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckCancelOnTests
             -------------------------------------------------------------------------------
-            Tests run: 6, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 9.29 s - in org.eclipse.microprofile.lra.tck.TckCancelOnTests
+            Tests run: 6, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 9.464 s - in org.eclipse.microprofile.lra.tck.TckCancelOnTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckContextTests
             -------------------------------------------------------------------------------
-            Tests run: 11, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 35.442 s - in org.eclipse.microprofile.lra.tck.TckContextTests
+            Tests run: 11, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 40.809 s - in org.eclipse.microprofile.lra.tck.TckContextTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckInvalidSignaturesTests
             -------------------------------------------------------------------------------
-            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 42.934 s - in org.eclipse.microprofile.lra.tck.TckInvalidSignaturesTests
+            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 40.588 s - in org.eclipse.microprofile.lra.tck.TckInvalidSignaturesTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckLRATypeTests
             -------------------------------------------------------------------------------
-            Tests run: 75, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 13.638 s - in org.eclipse.microprofile.lra.tck.TckLRATypeTests
+            Tests run: 75, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 12.774 s - in org.eclipse.microprofile.lra.tck.TckLRATypeTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckParticipantTests
             -------------------------------------------------------------------------------
-            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 40.043 s - in org.eclipse.microprofile.lra.tck.TckParticipantTests
+            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 37.642 s - in org.eclipse.microprofile.lra.tck.TckParticipantTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckRecoveryTests
             -------------------------------------------------------------------------------
-            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 41.392 s - in org.eclipse.microprofile.lra.tck.TckRecoveryTests
+            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 41.537 s - in org.eclipse.microprofile.lra.tck.TckRecoveryTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckTests
             -------------------------------------------------------------------------------
-            Tests run: 23, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 24.228 s - in org.eclipse.microprofile.lra.tck.TckTests
+            Tests run: 23, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 24.288 s - in org.eclipse.microprofile.lra.tck.TckTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckUnknownStatusTests
             -------------------------------------------------------------------------------
-            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 19.339 s - in org.eclipse.microprofile.lra.tck.TckUnknownStatusTests
+            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 19.13 s - in org.eclipse.microprofile.lra.tck.TckUnknownStatusTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckUnknownTests
             -------------------------------------------------------------------------------
-            Tests run: 4, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 35.668 s - in org.eclipse.microprofile.lra.tck.TckUnknownTests
+            Tests run: 4, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 29.359 s - in org.eclipse.microprofile.lra.tck.TckUnknownTests
 
             [INFO] Results:
             [INFO]
@@ -222,40 +220,39 @@ title: Certification
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckCancelOnTests
             -------------------------------------------------------------------------------
-            Tests run: 6, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 9.07 s - in org.eclipse.microprofile.lra.tck.TckCancelOnTests
+            Tests run: 6, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 9.499 s - in org.eclipse.microprofile.lra.tck.TckCancelOnTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckContextTests
             -------------------------------------------------------------------------------
-            Tests run: 11, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 34.361 s - in org.eclipse.microprofile.lra.tck.TckContextTests
+            Tests run: 11, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 40.819 s - in org.eclipse.microprofile.lra.tck.TckContextTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckInvalidSignaturesTests
             -------------------------------------------------------------------------------
-            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 37.479 s - in org.eclipse.microprofile.lra.tck.TckInvalidSignaturesTests
+            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 41.495 s - in org.eclipse.microprofile.lra.tck.TckInvalidSignaturesTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckLRATypeTests
             -------------------------------------------------------------------------------
-            Tests run: 75, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 11.974 s - in org.eclipse.microprofile.lra.tck.TckLRATypeTests
+            Tests run: 75, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 12.997 s - in org.eclipse.microprofile.lra.tck.TckLRATypeTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckParticipantTests
             -------------------------------------------------------------------------------
-            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 39.037 s - in org.eclipse.microprofile.lra.tck.TckParticipantTests
+            Tests run: 5, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 36.532 s - in org.eclipse.microprofile.lra.tck.TckParticipantTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckRecoveryTests
             -------------------------------------------------------------------------------
-            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 39.772 s - in org.eclipse.microprofile.lra.tck.TckRecoveryTests
+            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 44.449 s - in org.eclipse.microprofile.lra.tck.TckRecoveryTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckTests
             -------------------------------------------------------------------------------
-            Tests run: 23, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 23.622 s - in org.eclipse.microprofile.lra.tck.TckTests
+            Tests run: 23, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 24.731 s - in org.eclipse.microprofile.lra.tck.TckTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckUnknownStatusTests
             -------------------------------------------------------------------------------
-            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 18.463 s - in org.eclipse.microprofile.lra.tck.TckUnknownStatusTests
+            Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 19.886 s - in org.eclipse.microprofile.lra.tck.TckUnknownStatusTests
             -------------------------------------------------------------------------------
             Test set: org.eclipse.microprofile.lra.tck.TckUnknownTests
             -------------------------------------------------------------------------------
-            Tests run: 4, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 35.478 s - in org.eclipse.microprofile.lra.tck.TckUnknownTests
-
+            Tests run: 4, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 30.248 s - in org.eclipse.microprofile.lra.tck.TckUnknownTests
             [INFO] Results:
             [INFO]
             [INFO] Tests run: 133, Failures: 0, Errors: 0, Skipped: 0
