Update LRA 1.0 CCR for the restaged LRA 1.0 artifacts

--- a/certifications/lra/microprofile-lra-1.0/index.html.haml
+++ b/certifications/lra/microprofile-lra-1.0/index.html.haml
@@ -1,6 +1,6 @@
 ---
 layout: rightcol
-title: Certification
+title: Certification LRA 1.0
 ---
 
 .h2 MicroProfile LRA 1.0 Compatible Certification Request
@@ -22,7 +22,7 @@ title: Certification
   %li
     %p
       Commit -
-      %a{:href => "https://github.com/eclipse/microprofile-lra/commit/1eebb2221541f13d41ead557726150e34aec8ee7"} https://github.com/eclipse/microprofile-lra/commit/1eebb2221541f13d41ead557726150e34aec8ee7
+      %a{:href => "https://github.com/eclipse/microprofile-lra/commit/99ee9b1f7dc02b10ee7b7f15d26234ad8ba2df15"} https://github.com/eclipse/microprofile-lra/commit/99ee9b1f7dc02b10ee7b7f15d26234ad8ba2df15
   %li
     %p
       Download -
