Add gitter.im to the community page

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -13,6 +13,15 @@ title: Community
       Visit Narayana Forum
   .col-md-4
     %h1
+      Chat
+    %p
+      You can chat with the community on Gitter.im (if you aren't already a member then, once you're in the room add
+      yourself using the green Add button on the right hand side of the page).
+      Chat communication is recorded by Gitter and publicly available without any need for a Gitter account.
+    %a{:href => "https://gitter.im/jbosstm/community", :class => "btn btn-primary"}
+      Chat With Us
+  .col-md-4
+    %h1
       Blog
     %p
       All the latest Narayana project news and other interesting stuff is published in our blog.
