Fixing links at 'Getting Started' section at right column

--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -2,15 +2,15 @@
   %h2 Getting Started
   %ul.nav.nav-pills.nav-stacked
     %li
-      %a{:href => href="https://www.jboss.org:80/narayana/downloads/latest.html"}
+      %a{:href => href="#{site.base_url}/downloads/index.html"}
         %i.icon-fixed-width.icon-arrow-right
         Download the latest version of Narayana standalone
     %li
-      %a{:href => href="https://ci.jboss.org/hudson/job/WildFly-latest-master/"}
+      %a{:href => href="https://www.wildfly.org/downloads/"}
         %i.icon-fixed-width.icon-arrow-right
-        Or download the latest version of Narayana + WildFly
+        Or download the latest release of WildFly
     %li
-      %a{:href => href="https://www.jboss.org:80/narayana/documentation/latest.html"}
+      %a{:href => href="#{site.base_url}/documentation/index.html"}
         %i.icon-fixed-width.icon-arrow-right
         Read our getting started documentation
     %li
@@ -18,11 +18,11 @@
         %i.icon-fixed-width.icon-arrow-right
         Run our quickstarts
     %li
-      %a{:href => href="https://narayana.io/community/index.html"}
+      %a{:href => href="#{site.base_url}/community/index.html"}
         %i.icon-fixed-width.icon-arrow-right
         Meet the team
     %li
-      %a{:href => href="https://community.jboss.org/wiki/GetInvolvedWithNarayana"}
+      %a{:href => href="https://github.com/jbosstm/narayana/blob/master/CONTRIBUTING.md"}
         %i.icon-fixed-width.icon-arrow-right
         Get involved!
 
@@ -91,5 +91,5 @@
       %p JetBrains has kindly donated an open source IntelliJ license.
 
 %div
-  %a{:href => "https://www.jboss.org/security.html"}
+  %a{:href => "https://access.redhat.com/security/team/contact/"}
     %img{:alt => "Find a security issue with a JBoss Project or Product? Report it now", :height => "110", :src => "https://static.jboss.org/common/images/securityissue.png", :class => "img-responsive"}/
