--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -109,6 +109,13 @@ title: Community
       I started working for Red Hat in January 2020 and joined Narayana team as Software Engineer with overall 4 years of experience.
     %p
       Prior to this role, I have worked in distributed system projects, handling various components like Job scheduling, node management and managing transactions between nodes using Java EE technologies. In first year of my software career, I have also worked on C# technology.
+  .col-md-6
+    %h2
+      Manuel Finelli
+    %p
+      Joined the JBoss Transaction team in 2020 with 6+ years experience in software engineering.
+    .div{:style => "height: 250px"}
+      %a{:class => "twitter-timeline", :href => "https://twitter.com/jmfinelli", :height => "250"}
 
 .row
   .col-md-6
