Update list of contributors

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -86,24 +86,6 @@ title: Community
 .row
   .col-md-6
     %h2
-      Ondra Chaloupka
-    %p
-      I joined the team with 5 years experience of QE engineer for JBoss EAP.
-    %p
-      Prior to work at Red Hat I gained experience in PHP web and Java EE logistic system development.
-    .div{:style => "height: 250px"}
-      %a{:class => "twitter-timeline", :href => "https://twitter.com/_chalda", :height => "250"}
-  .col-md-6
-    %h2
-      Tom Jenkinson
-    %p
-      My technical specialisms include transaction and integration technologies. primarily in the distributed systems field.
-    .div{:style => "height: 250px"}
-      %a{:class => "twitter-timeline", :href => "https://twitter.com/tom_jenkinson", :"data-widget-id" => "532499035693662208", :height => "250"}
-
-.row
-  .col-md-6
-    %h2
       Mayank Kunwar
     %p
       I started working for Red Hat in January 2020 and joined Narayana team as Software Engineer with overall 4 years of experience.
@@ -122,6 +104,7 @@ title: Community
     %h2
       Other contributors:
     %ul
+      %li Ondra Chaloupka
       %li Jonathan Halliday
       %li Amos Feng
       %li Gytis Trikleris
