Add a bio for Marco

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -100,6 +100,12 @@ title: Community
     .div{:style => "height: 250px"}
       %a{:class => "twitter-timeline", :href => "https://twitter.com/jmfinelli", :height => "250"}
 
+  .col-md-6
+    %h2
+      Marco Sappé Griot
+    %p
+      Marco has a number of years experience as a Java back-end developer developing applications and microservices on various platforms including SpringBoot, Kubernetes and Openshift.
+
 .row
   .col-md-6
     %h2
