Added Mayank and changed a name to Richard Achmatowicz

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -110,7 +110,8 @@ title: Community
       %li Andrew Dinn
       %li Ondra Chaloupka
       %li Kevin Conner.
-      %li Richard Ackmatowicz.
+      %li Mayank Kunwar
+      %li Richard Achmatowicz.
       %li Machulak: MSc student.
       %li Ioannis Ganotis: MSc student.
 
