Updated to not reference Java EE in some places

--- a/_partials/rightcol-documentation.html.haml
+++ b/_partials/rightcol-documentation.html.haml
@@ -26,10 +26,10 @@
       %a{:href => relative("/narayana-features/index.html")}
         %i.icon-fixed-width.icon-arrow-right
         Features
-    %li{:class => "#{'active' if page.real_page.output_path.start_with?('/java-ee-support')}"}
-      %a{:href => relative("/java-ee-support/index.html")}
+    %li{:class => "#{'active' if page.real_page.output_path.start_with?('/jakarta-ee-support')}"}
+      %a{:href => relative("/jakarta-ee-support/index.html")}
         %i.icon-fixed-width.icon-arrow-right
-        Java EE Support
+        Jakarta EE Support
     %li{:class => "#{'active' if page.real_page.output_path.start_with?('/platform-support')}"}
       %a{:href => relative("/platform-support/index.html")}
         %i.icon-fixed-width.icon-arrow-right
