--- a/index.html.haml
+++ b/index.html.haml
@@ -67,7 +67,7 @@ title: Narayana Homepage
           %td.term
             Industry Leading Interoperability
           %td.def
-            Extends beyond Java EE to Web Services and REST through support of the WS-Coordination, WS-AtomicTransaction, WS-BusinessActivity and REST-AT specifications.
+            Extends beyond Jakarta EE to Web Services and REST through support of the WS-Coordination, WS-AtomicTransaction, WS-BusinessActivity and REST-AT specifications.
         %tr
           %td.term
             Professional Support
