JBTM-3588 Jakarta Migration of the website

--- a/index.html.haml
+++ b/index.html.haml
@@ -81,7 +81,7 @@ title: Narayana Homepage
       Narayana is a transactions toolkit which provides support for applications developed using a broad range of standards-based transaction protocols:
     %ol
       %li
-        JTA
+        Jakarta Transactions
       %li
         JTS
       %li
