JBTM-3807 Enhancement for the new website discussed on Zulip
16. Remove download link to the binary and the "Download the latest version of Narayana standalone" link in the right-hand side bar

--- a/layouts/partials/sidebar/docs-toc.html
+++ b/layouts/partials/sidebar/docs-toc.html
@@ -1,9 +1,8 @@
 <div class="page-links">
   <h2 class="h3">Getting Started</h2>
-  <a href="/downloads/">Download the latest version of Narayana standalone</a>
-  <a href="https://www.wildfly.org/downloads/">Or download the latest release of WildFly</a>
   <a href="/documentation/">Read our getting started documentation</a>
   <a href="https://github.com/jbosstm/quickstart">Run our quickstarts</a>
+  <a href="https://www.wildfly.org/downloads/">Download the latest release of WildFly</a>
   <a href="/community/#our-team">Meet the team</a>
   <a href="https://github.com/jbosstm/narayana/blob/main/CONTRIBUTING.md">Get involved!</a>
 </div>
