--- a/layouts/partials/head/custom-head.html
+++ b/layouts/partials/head/custom-head.html
@@ -1,10 +1,8 @@
 <!-- Custom head -->
+
 <div class="row2 row flex-xl-nowrap">
-        <div class="banner">
-                <a href="#"></a>"
-                <div class="row flex-xl-nowrap taglinelight visible-lg">Premier open source transaction manager</div>
-        </div>
-        
+        <img src="/narayana-banner-1180px.png" alt="narayana-banner-1180px">
+        <div class="bottom-right">Premier open source transaction manager</div>
 </div>
 
 <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
